[metadata]
name = Quart-WebSocketRooms
version = 0.0.1
python_requires = >=3.7.0
description = A package for creating WebSocket room based web applications using the Quart ASGI microframework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ToranSharma/WebSocketRooms/
author = Toran Sharma
author_email = toransharma27@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    quart_websocketrooms
install_requires =
    quart
python_required = >=3.7

